# hakaton-gagarin-sentiment

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run_me.py
final_solution/: model.py  solution.py
models/: optuna_study.db
notebooks_important/: EDA.ipynb  Gigachat.ipynb  LLM-based Data Labeling.ipynb  gliner.ipynb  mistral-dataset.ipynb  prepare_data_for_training.ipynb  technology.ipynb  training.ipynb
notebooks_important/prompts/: basic_template.yaml
tests/: test_solution.py
